--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <title>Travel</title>
         <link rel="stylesheet" href="css/style.css" type="text/css" />
+        <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta property="og:image" content="" />
         <meta name="description" content="" />
@@ -11,7 +12,7 @@
         <script src="js/jquery-3.5.1.min.js"></script>
         <script src="js/script.js"></script>
 
-        <link rel="manifest" href="manifest/manifest.json" />
+        <link rel="manifest" href="manifest.json" />
     </head>
     <body>
         <section class="wrapper">
